# leet_code

./: .bandit  .eslintignore  .eslintrc.json  .flaskenv  .gitignore  .prettierignore  CATEGORIES_COVERAGE.md  CHANGELOG.md  CONTRIBUTING.md  JS_QUALITY_TOOLS.md  LICENSE  README.md  SOLUTION_FORMATTING_GUIDE.md  SOLUTION_FORMATTING_GUIDE_JS.md  SOLUTION_TEMPLATE.js  SOLUTION_TEMPLATE.py  analyze_coverage.py  analyze_python_solutions.py  app.py  category_data.py  generate_docs.py  justfile  package-lock.json  package.json  pyproject.toml  run.sh  vitest.config.js
.claude_functions/documentation_review/: iterative_fixer.py  python_first_fixer.py
analysis/: pattern-recognition-guide.md
conversations/: leetcode-project-creation.md
data/: problem_tags.json
docs/: MODULE_STRUCTURE.md  README.md  SOLUTION_FORMATTING_GUIDE.md  SOLUTION_FORMATTING_GUIDE_JS.md  SOLUTION_REVIEW_REPORT.md
docs/arrays-hashing/: 001-two-sum.md  README.md
docs/backtracking/: README.md
docs/binary-search/: README.md
docs/bit-manipulation/: README.md
docs/design/: README.md
docs/developer-guide/: 01-overview.md  02-flask-architecture.md  03-data-management.md  04-template-system.md  05-static-files.md  06-adding-features.md  07-testing-procedures.md  08-template-creation.md  09-adding-languages.md  09-architecture.md  10-formatting-guide-creation.md  10-testing-languages.md  11-contribution-workflow.md  README.md
docs/dynamic-programming/: 070-climbing-stairs.md  README.md
docs/graphs/: README.md
docs/greedy/: README.md
docs/heap/: README.md
docs/interval/: README.md
docs/linked-list/: README.md
docs/markdown-guide/: 01-overview.md  02-metadata.md  03-problem-description.md  04-solution-explanation.md  05-code-section.md  06-language-formatting.md  07-processing-flow.md  08-best-practices.md  09-examples.md  README.md
docs/math/: README.md
docs/matrix/: README.md
docs/monotonic-stack/: README.md
docs/prefix-sum/: README.md
docs/queue/: README.md
docs/recursion/: README.md
docs/segment-tree/: README.md
docs/simulation/: README.md
docs/sliding-window/: 003-longest-substring.md  README.md
docs/sorting/: README.md
docs/stack/: README.md
docs/string-manipulation/: README.md
docs/strings/: README.md
docs/topological-sort/: README.md
docs/trees/: README.md
docs/trie/: README.md
docs/two-pointers/: README.md
docs/union-find/: README.md
docs/upload-guide/: 01-overview.md  02-template-files.md  03-solution-structure.md  04-quick-start.md  05-formatting-guidelines.md  README.md  SOLUTION_FORMATTING_GUIDE.md  SOLUTION_FORMATTING_GUIDE_JS.md
docs/user-guide/: 01-overview.md  02-getting-started.md  03-browsing-solutions.md  03-downloading-solutions.md  04-code-viewing.md  04-downloading-solutions.md  05-code-viewing.md  05-understanding-solutions.md  06-customizing-themes.md  06-understanding-solutions.md  07-language-selection.md  07-study-strategies.md  08-customizing-themes.md  08-language-examples.md  09-language-selection.md  10-language-examples.md  README.md
plans/: study-plan.md
scripts/: add_metadata_section.py  extract_tags.py
scripts/documentation_validation/: README.md  fixer.py  full_validation.py  injection.py  validate.py
solutions/: README.md  top-50-solutions.py
solutions/arrays-hashing/: 001-two-sum.js  001-two-sum.py  036-valid-sudoku.js  036-valid-sudoku.py  049-group-anagrams.js  049-group-anagrams.py  056-merge-intervals.js  056-merge-intervals.py  128-longest-consecutive-sequence.py  128-longest-consecutive.py  169-majority-element.py  217-contains-duplicate.py  238-product-except-self.py  238-product-of-array-except-self.py  242-valid-anagram.py  347-top-k-frequent-elements.js  347-top-k-frequent-elements.py  347-top-k-frequent.py  448-find-all-numbers-disappeared-in-an-array.js  448-find-all-numbers-disappeared-in-an-array.py  448-find-disappeared-numbers.py
solutions/backtracking/: 017-letter-combinations-of-a-phone-number.js  017-letter-combinations-of-a-phone-number.py  039-combination-sum.js  039-combination-sum.py  040-combination-sum-ii.js  040-combination-sum-ii.py  046-permutations.py  047-permutations-ii.js  047-permutations-ii.py  051-n-queens.py  077-combinations.js  077-combinations.py  078-subsets.py  090-subsets-ii.py  131-palindrome-partitioning.py
solutions/binary-search/: 033-search-in-rotated-sorted-array.py  034-find-first-and-last-position-of-element-in-sorted-array.py  034-find-first-last.py  035-search-insert-position.js  035-search-insert-position.py  074-search-a-2d-matrix.js  074-search-a-2d-matrix.py  153-find-minimum-in-rotated-sorted-array.js  153-find-minimum-in-rotated-sorted-array.py  162-find-peak-element.js  162-find-peak-element.py  278-first-bad-version.js  278-first-bad-version.py  287-find-duplicate.py  374-guess-number-higher-or-lower.py  704-binary-search.js  704-binary-search.py  875-koko-eating-bananas.js  875-koko-eating-bananas.py
solutions/bit-manipulation/: 136-single-number.py  136-single.js  136-single.py  137-single.py  190-reverse.py  191-number-of-1-bits.py  191-number.js  191-number.py  231-power.js  231-power.py  260-single.py  268-missing.py  338-counting.js  338-counting.py  371-sum.js  371-sum.py  389-find.js  389-find.py
solutions/design/: 146-lru-cache.py  146-lru.js  146-lru.py  155-min-stack.py  173-bst.py  208-implement.py  211-word.js  211-word.py  225-implement.js  225-implement.py  232-implement.py  284-peeking-iterator.py  355-design-twitter.py  380-insert-delete-getrandom.py  380-randomized.py  460-lfu.js  460-lfu.py
solutions/dynamic-programming/: 005-longest-palindrome.py  053-maximum-subarray.py  062-unique-paths.js  062-unique-paths.py  070-climbing-stairs.js  (+11 more)
tasks/: current-tasks.md
templates/: 404.html  base.html  category.html  complexity.html  difficulty.html  doc_view.html  docs.html  index.html  no_solution.html  nodejs_example_generator.js  python_example_generator.py  search_results.html  solution.html  upload_solution.html  virtual_category.html
tests/: README-ISSUE-36-TESTS.md  README.md  test_index_routes.test.js  test_smoke.py
(+2649 files in other folders)
