[project]
name = "leet-code"
version = "0.1.0"
description = "Leet Code Learning Tool with web interface"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask>=3.0.0",
    "markdown>=3.5",
    "pygments>=2.17.0",
    "astor>=0.8.1",
]

[build-system]
requires = [ "pdm-backend",]
build-backend = "pdm.backend"

[dependency-groups]
lint = [ "ruff>=0.1.0", "mypy>=1.0",]
dev = [ "types-Markdown>=3.9.0.20250906", "types-Pygments>=2.19.0.20250809",]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.pdm]
distribution = false

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "UP", "B", "C4", "SIM",]
ignore = [ "E501", "N802", "N803",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
addopts = ""

[tool.pdm.scripts]
dev = "python -m pip install -e ."
flask = "python -m flask run"
test = "pytest"
lint = "ruff check src/ --fix"
lint-check = "ruff check src/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
typecheck = "mypy src/"

[tool.pdm.dev-dependencies]
test = [ "pytest>=7.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0",]

[tool.pdm.python]
use_venv = true

[tool.coverage.run]
omit = [ "tests/*", "*/tests/*", "*/__pycache__/*", "*/.venv/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if __name__ == .__main__.:", "raise AssertionError", "raise NotImplementedError", "if TYPE_CHECKING:",]
