[project]
name = "leet-code"
version = "0.1.0"
description = "Leet Code Learning Tool with web interface"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask>=3.0.0",
    "markdown>=3.5",
    "pygments>=2.17.0",
]

[[project.authors]]
name = "Jeff Lowrey"
email = "jeff@jaral.org"

[project.license]
file = "LICENSE"

[project.urls]
Documentation = "https://github.com/Jeff-Lowrey/leet_code#readme"
Issues = "https://github.com/Jeff-Lowrey/leet_code/issues"
Source = "https://github.com/Jeff-Lowrey/leet_code"

[build-system]
requires = [ "pdm-backend[uv]",]
build-backend = "pdm.backend"

[dependency-groups]
lint = [ "ruff>=0.1.0", "mypy>=1.0",]
dev = [
    "pytest>=8.0.0",
    "types-Markdown>=3.9.0.20250906",
    "types-Pygments>=2.19.0.20250809",
    "bandit>=1.8.6",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
# Industry-standard strict type checking (enabled for production code)
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
# Additional strict checks
disallow_untyped_calls = true
disallow_subclassing_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = ".claude_functions.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "solutions.*"
# Very relaxed rules for LeetCode solutions (learning/practice code)
# Focus only on critical errors (undefined names, syntax issues)
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
allow_untyped_globals = true
allow_redefinition = true

[tool.pdm]
distribution = false
package-mode = false
installer = "uv"

[tool.pdm.dev-dependencies]

[tool.pdm.resolution]
resolver = "uv"

[tool.pdm.python]
use_venv = true

[tool.pdm.build]
includes = ["src"]

[tool.pdm.scripts]
dev = "python -m pip install -e ."
flask = "python -m flask run"
test = "pytest"
lint = "ruff check src/ --fix"
lint-check = "ruff check src/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
typecheck = "mypy src/"
security = "bandit -c pyproject.toml -r src/"

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "UP", "B", "C4", "SIM",]
ignore = [ "E501", "N802", "N803",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
addopts = ""

[tool.bandit]
targets = ["src"]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "build",
    "dist",
    ".tox",
    ".pytest_cache",
    "__pycache__",
]
skips = ["B101"]  # assert_used - OK in tests
severity_level = "medium"
confidence_level = "medium"

[tool.coverage.run]
omit = [ "tests/*", "*/tests/*", "*/__pycache__/*", "*/.venv/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if __name__ == .__main__.:", "raise AssertionError", "raise NotImplementedError", "if TYPE_CHECKING:",]
